# esp32-sms-gateway-4g

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mqtt_heartbeat_test.py  partitions.csv  sdkconfig.defaults
box/: README.md  sms_gateway_box.stl  sms_gateway_lid.stl
components/a7670e/: CMakeLists.txt  a7670e.c  a7670e.h
components/config/: CMakeLists.txt  config.c  config.h
components/mqtt_gateway/: CMakeLists.txt  mqtt_gateway.c  mqtt_gateway.h
components/ota_update/: CMakeLists.txt  ota_update.c  ota_update.h
components/rest_api/: CMakeLists.txt  rest_api.c  rest_api.h
components/sms_store/: CMakeLists.txt  sms_store.c  sms_store.h
components/tcp_log/: CMakeLists.txt  tcp_log.c  tcp_log.h
components/web_server/: CMakeLists.txt  web_server.c  web_server.h
components/webhook/: CMakeLists.txt  webhook.c  webhook.h
main/: CMakeLists.txt  idf_component.yml  main.c
